--- a/actividad_df.ipynb
+++ b/actividad_df.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "id": "afc60e66",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,6 @@
     "connexion=sqlite3.connect(\"Salaries.sqlite\") \n",
     "#Crea el dataframe con los datos del datasets\n",
     "df=pd.read_sql_query(\"SELECT * FROM Salaries\", connexion)\n",
-    "df\n",
     "#Cierra la conexión a la base de datos\n",
     "connexion.close()\n",
     "\n",
@@ -43,15 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1178b1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "f571f50d",
    "metadata": {},
    "outputs": [
@@ -74,7 +65,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "135f2471",
    "metadata": {},
    "outputs": [
@@ -199,7 +190,7 @@
        "110536       Ellen G Moffatt         415767.94"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "648c22ee",
    "metadata": {},
    "outputs": [
@@ -256,7 +247,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>NATHANIEL FORD</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -276,7 +267,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>PATRICK GARDNER</td>\n",
-       "      <td>9737.00</td>\n",
+       "      <td>9737.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -291,17 +282,17 @@
        "    <tr>\n",
        "      <th>148650</th>\n",
        "      <td>Not provided</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Not Provided</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>148651</th>\n",
        "      <td>Not provided</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Not Provided</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>148652</th>\n",
        "      <td>Not provided</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Not Provided</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>148653</th>\n",
@@ -314,36 +305,36 @@
        "</div>"
       ],
       "text/plain": [
-       "             EmployeeName  OvertimePay\n",
-       "0          NATHANIEL FORD         0.00\n",
-       "1            GARY JIMENEZ    245131.88\n",
-       "2          ALBERT PARDINI    106088.18\n",
-       "3       CHRISTOPHER CHONG     56120.71\n",
-       "4         PATRICK GARDNER      9737.00\n",
-       "...                   ...          ...\n",
-       "148649      Roy I Tillery         0.00\n",
-       "148650       Not provided          NaN\n",
-       "148651       Not provided          NaN\n",
-       "148652       Not provided          NaN\n",
-       "148653          Joe Lopez         0.00\n",
+       "             EmployeeName   OvertimePay\n",
+       "0          NATHANIEL FORD           0.0\n",
+       "1            GARY JIMENEZ     245131.88\n",
+       "2          ALBERT PARDINI     106088.18\n",
+       "3       CHRISTOPHER CHONG      56120.71\n",
+       "4         PATRICK GARDNER        9737.0\n",
+       "...                   ...           ...\n",
+       "148649      Roy I Tillery          0.00\n",
+       "148650       Not provided  Not Provided\n",
+       "148651       Not provided  Not Provided\n",
+       "148652       Not provided  Not Provided\n",
+       "148653          Joe Lopez          0.00\n",
        "\n",
        "[148654 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=df[[\"EmployeeName\", \"OvertimePay\"]]\n",
+    "empleados_trabajadores=df[[\"EmployeeName\", \"OvertimePay\"]]\n",
     "df[\"OvertimePay\"]=pd.to_numeric(df[\"OvertimePay\"], errors=\"coerce\")\n",
-    "df"
+    "empleados_trabajadores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "id": "c5dc65c7",
    "metadata": {},
    "outputs": [
@@ -375,90 +366,140 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Id</th>\n",
        "      <th>EmployeeName</th>\n",
+       "      <th>JobTitle</th>\n",
+       "      <th>BasePay</th>\n",
        "      <th>OvertimePay</th>\n",
+       "      <th>OtherPay</th>\n",
+       "      <th>Benefits</th>\n",
+       "      <th>TotalPay</th>\n",
+       "      <th>TotalPayBenefits</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>Agency</th>\n",
+       "      <th>Status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>GARY JIMENEZ</td>\n",
+       "      <td>CAPTAIN III (POLICE DEPARTMENT)</td>\n",
+       "      <td>155966.02</td>\n",
        "      <td>245131.88</td>\n",
+       "      <td>137811.38</td>\n",
+       "      <td>None</td>\n",
+       "      <td>538909.28</td>\n",
+       "      <td>538909.28</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>None</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>ALBERT PARDINI</td>\n",
+       "      <td>CAPTAIN III (POLICE DEPARTMENT)</td>\n",
+       "      <td>212739.13</td>\n",
        "      <td>106088.18</td>\n",
+       "      <td>16452.6</td>\n",
+       "      <td>None</td>\n",
+       "      <td>335279.91</td>\n",
+       "      <td>335279.91</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>None</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>CHRISTOPHER CHONG</td>\n",
+       "      <td>WIRE ROPE CABLE MAINTENANCE MECHANIC</td>\n",
+       "      <td>77916.0</td>\n",
        "      <td>56120.71</td>\n",
+       "      <td>198306.9</td>\n",
+       "      <td>None</td>\n",
+       "      <td>332343.61</td>\n",
+       "      <td>332343.61</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>None</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>7</td>\n",
        "      <td>ALSON LEE</td>\n",
+       "      <td>BATTALION CHIEF, (FIRE DEPARTMENT)</td>\n",
+       "      <td>92492.01</td>\n",
        "      <td>89062.90</td>\n",
+       "      <td>134426.14</td>\n",
+       "      <td>None</td>\n",
+       "      <td>315981.05</td>\n",
+       "      <td>315981.05</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>None</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>9</td>\n",
        "      <td>MICHAEL MORRIS</td>\n",
+       "      <td>BATTALION CHIEF, (FIRE DEPARTMENT)</td>\n",
+       "      <td>176932.64</td>\n",
        "      <td>86362.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>ARTHUR KENNEY</td>\n",
-       "      <td>71344.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>PATRICIA JACKSON</td>\n",
-       "      <td>87082.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>DAVID FRANKLIN</td>\n",
-       "      <td>74050.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>RICHARD CORRIEA</td>\n",
-       "      <td>73478.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>SEBASTIAN WONG</td>\n",
-       "      <td>119397.26</td>\n",
+       "      <td>40132.23</td>\n",
+       "      <td>None</td>\n",
+       "      <td>303427.55</td>\n",
+       "      <td>303427.55</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>None</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         EmployeeName  OvertimePay\n",
-       "1        GARY JIMENEZ    245131.88\n",
-       "2      ALBERT PARDINI    106088.18\n",
-       "3   CHRISTOPHER CHONG     56120.71\n",
-       "6           ALSON LEE     89062.90\n",
-       "8      MICHAEL MORRIS     86362.68\n",
-       "10      ARTHUR KENNEY     71344.88\n",
-       "11   PATRICIA JACKSON     87082.62\n",
-       "14     DAVID FRANKLIN     74050.30\n",
-       "15    RICHARD CORRIEA     73478.20\n",
-       "17     SEBASTIAN WONG    119397.26"
+       "   Id       EmployeeName                              JobTitle    BasePay  \\\n",
+       "1   2       GARY JIMENEZ       CAPTAIN III (POLICE DEPARTMENT)  155966.02   \n",
+       "2   3     ALBERT PARDINI       CAPTAIN III (POLICE DEPARTMENT)  212739.13   \n",
+       "3   4  CHRISTOPHER CHONG  WIRE ROPE CABLE MAINTENANCE MECHANIC    77916.0   \n",
+       "6   7          ALSON LEE    BATTALION CHIEF, (FIRE DEPARTMENT)   92492.01   \n",
+       "8   9     MICHAEL MORRIS    BATTALION CHIEF, (FIRE DEPARTMENT)  176932.64   \n",
+       "\n",
+       "   OvertimePay   OtherPay Benefits   TotalPay  TotalPayBenefits  Year Notes  \\\n",
+       "1    245131.88  137811.38     None  538909.28         538909.28  2011  None   \n",
+       "2    106088.18    16452.6     None  335279.91         335279.91  2011  None   \n",
+       "3     56120.71   198306.9     None  332343.61         332343.61  2011  None   \n",
+       "6     89062.90  134426.14     None  315981.05         315981.05  2011  None   \n",
+       "8     86362.68   40132.23     None  303427.55         303427.55  2011  None   \n",
+       "\n",
+       "          Agency Status  \n",
+       "1  San Francisco   None  \n",
+       "2  San Francisco   None  \n",
+       "3  San Francisco   None  \n",
+       "6  San Francisco   None  \n",
+       "8  San Francisco   None  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#todo\n",
-    "df=df[[\"EmployeeName\", \"OvertimePay\"]]\n",
+    "empleados_trabajadores=df[[\"EmployeeName\", \"OvertimePay\"]]\n",
     "mayores_horas=df[df[\"OvertimePay\"]>50000]\n",
     "print(\"Los empleados con más de 50,000 de horas extras son:\")\n",
-    "mayores_horas.head(10)"
+    "mayores_horas.head(5)"
    ]
   },
   {
@@ -471,38 +512,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "e35c5908",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Year'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\IFP-2025\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3804\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3805\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3806\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 'Year'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#todo\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m años=\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mYear\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m      3\u001b[39m años.head(\u001b[32m10\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# cantidad_empleados_anio = df.groupby('Year')['EmployeeName'].nunique() ##la columna Year siguen sin reconocer\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# cantidad_empleados_anio\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\IFP-2025\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4101\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4102\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4104\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\IFP-2025\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3807\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3808\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3809\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3810\u001b[39m     ):\n\u001b[32m   3811\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3814\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3815\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3816\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3817\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'Year'"
-     ]
+     "data": {
+      "text/plain": [
+       "Year\n",
+       "2011    33878\n",
+       "2012    34349\n",
+       "2013    36150\n",
+       "2014    36684\n",
+       "Name: EmployeeName, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#todo\n",
-    "años=df[\"Year\"]\n",
-    "años.head(10)\n",
-    "# cantidad_empleados_anio = df.groupby('Year')['EmployeeName'].nunique() ##la columna Year siguen sin reconocer\n",
-    "# cantidad_empleados_anio"
+    "df.groupby(\"Year\")[\"EmployeeName\"].nunique()"
    ]
   },
   {
@@ -515,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "e388d537",
    "metadata": {},
    "outputs": [
@@ -532,7 +564,7 @@
        "294"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "4420d985",
    "metadata": {},
    "outputs": [
@@ -569,7 +601,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "64d765f0",
    "metadata": {},
    "outputs": [
@@ -609,11 +641,11 @@
        "2011     71744.103871\n",
        "2012    100553.229232\n",
        "2013    101440.519714\n",
-       "2014    100261.438668\n",
+       "2014    100250.918884\n",
        "Name: TotalPayBenefits, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "1f27e45c",
    "metadata": {},
    "outputs": [],
@@ -661,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
